[gd_scene load_steps=7 format=2]

[ext_resource path="res://levelselect/LevelSelect.gd" type="Script" id=1]
[ext_resource path="res://levelselect/digits.png" type="Texture" id=2]
[ext_resource path="res://audio/bonus.ogg" type="AudioStream" id=3]
[ext_resource path="res://freddy/Freddy.tscn" type="PackedScene" id=4]
[ext_resource path="res://bonus/Bonus.tscn" type="PackedScene" id=5]
[ext_resource path="res://levelselect/select-level.png" type="Texture" id=6]

[node name="LevelSelect" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 512.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num1" type="Sprite" parent="."]
position = Vector2( 528, 80 )
texture = ExtResource( 2 )
hframes = 5
vframes = 3
frame = 1

[node name="Num2" type="Sprite" parent="."]
position = Vector2( 528, 128 )
texture = ExtResource( 2 )
hframes = 5
vframes = 3
frame = 2

[node name="Num3" type="Sprite" parent="."]
position = Vector2( 528, 176 )
texture = ExtResource( 2 )
hframes = 5
vframes = 3
frame = 3

[node name="Num4" type="Sprite" parent="."]
position = Vector2( 528, 224 )
texture = ExtResource( 2 )
hframes = 5
vframes = 3
frame = 4

[node name="Num5" type="Sprite" parent="."]
position = Vector2( 528, 272 )
texture = ExtResource( 2 )
hframes = 5
vframes = 3
frame = 5

[node name="Num6" type="Sprite" parent="."]
position = Vector2( 528, 320 )
texture = ExtResource( 2 )
hframes = 5
vframes = 3
frame = 6

[node name="Num7" type="Sprite" parent="."]
position = Vector2( 528, 368 )
texture = ExtResource( 2 )
hframes = 5
vframes = 3
frame = 7

[node name="Num8" type="Sprite" parent="."]
position = Vector2( 528, 416 )
texture = ExtResource( 2 )
hframes = 5
vframes = 3
frame = 8

[node name="Num9" type="Sprite" parent="."]
position = Vector2( 528, 464 )
texture = ExtResource( 2 )
hframes = 5
vframes = 3
frame = 9

[node name="Bonus1" parent="." instance=ExtResource( 5 )]
position = Vector2( 496, 76 )

[node name="Bonus2" parent="." instance=ExtResource( 5 )]
position = Vector2( 496, 124 )
level = 1

[node name="Bonus3" parent="." instance=ExtResource( 5 )]
position = Vector2( 496, 172 )
level = 2

[node name="Bonus4" parent="." instance=ExtResource( 5 )]
position = Vector2( 496, 220 )
level = 3

[node name="Bonus5" parent="." instance=ExtResource( 5 )]
position = Vector2( 496, 268 )
level = 4

[node name="Bonus6" parent="." instance=ExtResource( 5 )]
position = Vector2( 496, 316 )
level = 5

[node name="Bonus7" parent="." instance=ExtResource( 5 )]
position = Vector2( 496, 364 )
level = 6

[node name="Bonus8" parent="." instance=ExtResource( 5 )]
position = Vector2( 496, 412 )
level = 7

[node name="Bonus9" parent="." instance=ExtResource( 5 )]
position = Vector2( 496, 460 )
level = 8

[node name="Freddy" parent="." instance=ExtResource( 4 )]

[node name="BonusAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="bonus" from="Freddy" to="." method="_on_Freddy_bonus"]
[connection signal="finished" from="BonusAudio" to="." method="_on_BonusAudio_finished"]
